# check-box-mark-detector

./: Dockerfile  README.md  checkbox-experiment-1.ipynb  pyproject.toml
dataset/dataset-mleng-exercise/editor-1/: ._{00D63683-1E76-739E-6FAD-67A68D5B9305}.pdf.results
metrics/: benchmark_df.csv
model/binary_checkbox/: binary_checkbox_v1.h5
model/multiclass_checkbox/: multiclass_checkbox_v1.h5  multiclass_checkbox_v2.h5
notebooks/: checkbox-experiment-1.ipynb
