[tool.poetry]
name = "check-box-mark-detector"
version = "0.1.0"
description = ""
authors = ["Leonardo Lara"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.1"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
