[tool.poetry]
name = "check-box-mark-detector"
version = "0.1.0"
description = ""
authors = ["Leonardo Lara"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.1"
tensorflow = "^2.7.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
tensorflow-gpu = "^2.7.0"
tqdm = "^4.62.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
